# ecom-project

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
docker/: Dockerfile  dagster.yaml  requirements.txt  workspace.yaml
ecom_dagster/: pyproject.toml  setup.py
ecom_dagster/ecom_dagster/: __init__.py  assets.py  definitions.py  tasks.py
ecom_dbt/: .user.yml  dbt_project.yml  profiles.yml
ecom_dbt/macros/: half_no_null.sql
ecom_dbt/models/dim/: dim_customer_address.sql  dim_customers.sql  dim_orders.sql  dim_product_category_name_translation.sql  dim_products.sql  dim_seller.sql  schema.yml
ecom_dbt/models/fact/: fact_order_items.sql  fact_order_payments.sql  fact_order_reviews.sql  fact_orders.sql  fact_products.sql  schema.yml
ecom_dbt/models/raw/: raw_customers.sql  raw_order_items.sql  raw_order_payments.sql  raw_order_reviews.sql  raw_orders.sql  raw_product_category_name_translation.sql  raw_products.sql  raw_sellers.sql  sources.yml
spark_jobs/: load_to_snowflake.py
